[package]
authors = ["Alexander Koller <akoller@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "blinky_basic"
version = "0.1.0"

[dependencies]
panic-halt = "0.2.0"
arduino_nano33iot = "0.7.0"

# this lets you use `cargo fix`!
[[bin]]
name = "blinky_basic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations